[package]
name = "opentunnel"
version = "0.1.0"
edition = "2021"
description = "Modern SSH tunnel manager for Windows"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
